--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.3"
 
 services:
   database:
@@ -16,16 +16,14 @@ services:
       - .:/app
     env_file:
       - .env
-    command:
-      - bash -c "uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     ports:
       - "8000:8000"
 
-  pgadmin:
-    image: pgadmin
-    depends_on:
-      - database
-    env_file:
-      - .env
-    ports:
-      - "8050:80"
+  #pgadmin:
+  #  image: dpage/pgadmin4
+  #  depends_on:
+  #    - database
+  #  env_file:
+  #    - .env
+  #  ports:
+  #    - "8050:80"
